# tennis-leagues

./: AGENTS.md  env.example  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  skills-lock.json  vitest.config.ts
.specify/integrations/: opencode.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
docs/plans/: 2026-03-01-tennis-leagues-design.md  2026-04-08-testing-design.md  mvp-plan.md  tasks.md
specs/001-player-profile/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-mvp-group-view/: data-model.md  plan.md  quickstart.md  research.md  tasks.md
specs/003-testing/: plan.md  tasks.md
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: AppLayout.css  AppLayout.tsx  AuthGuard.tsx  AuthLayout.css  AuthLayout.tsx  Leaderboard.css  Leaderboard.tsx  RatingChart.css  RatingChart.tsx  RecentMatches.css  RecentMatches.tsx
src/lib/: firebase.ts
src/screens/: Auth.css  ConfirmMatch.css  ConfirmMatch.tsx  CreateGroup.tsx  GroupSettings.css  GroupSettings.tsx  GroupView.css  GroupView.tsx  GroupsList.css  GroupsList.tsx  JoinGroup.tsx  LogMatch.css  LogMatch.tsx  Login.tsx  MatchHistory.css  MatchHistory.tsx  PlayerProfile.css  PlayerProfile.tsx  Signup.tsx
src/services/: auth.ts  elo.ts  groups.ts  leaderboard.ts  matches.ts  player-profile.ts  users.ts
src/stores/: auth.store.ts  groups.store.ts  leaderboard.store.ts  matches.store.ts  player-profile.store.ts
test-results/: .last-run.json
tests/e2e/: auth.spec.ts  edge-cases.spec.ts  (+4 more)
(+42 files in other folders)
