[package]
name = "tennis_leagues"
version = "0.1.0"
description = "Tennis league tracking app with Elo rankings"
authors = ["Tennis Leagues Team"]
edition = "2021"

[lib]
name = "tennis_leagues_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
env_logger = "0.11"
